Fix layout issues with prices at large viewport widths and footer icons.

--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -180,7 +180,6 @@ em.or {
 
 @media (min-width: 1200px) {
   .entrees .item {
-    display: flex;
     align-items: center;
     padding: 1rem;
   }
